Hot fix - align the text.

--- a/themes/wind/css/cutGallery-main.css
+++ b/themes/wind/css/cutGallery-main.css
@@ -284,7 +284,7 @@ float: right;
 .g-add-photos-help{
     display: block;
     height: 24px;
-    padding-top: 7px;
+    padding-top: 6px;
 /*    background-color: pink;*/
     float: left;
 }
